fix flex-wrap

--- a/styles/test.css
+++ b/styles/test.css
@@ -117,16 +117,23 @@
 .box4{
     margin: 10px;
     width: 480px;
+    height: 300px;
     border-style: dashed;
     border-color: darkgray;
     display: flex;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: space-between;
+    align-items: center;
+
 }
 
 .box41{
     margin: 10px;
     padding: 10px;
     width: 60px;
+    height: 20px;
     text-align: center;
     color: white;
     background-color: red;
@@ -136,6 +143,7 @@
     padding: 10px;
     padding-bottom: 30px;
     width: 60px;
+    height: 20px;
     text-align: center;
     color: white;
     background-color: green;
@@ -145,6 +153,7 @@
     margin: 10px;
     padding: 10px;
     width: 60px;
+    height: 20px;
     text-align: center;
     color: white;
     background-color: blue;
@@ -154,6 +163,7 @@
     padding: 10px;
     padding-bottom: 30px;
     width: 60px;
+    height: 20px;
     text-align: center;
     color: white;
     background-color: red;
@@ -163,6 +173,7 @@
     margin: 10px;
     padding: 10px;
     width: 60px;
+    height: 20px;
     text-align: center;
     color: white;
     background-color: green;
@@ -172,7 +183,92 @@
     padding: 10px;
     padding-bottom: 30px;
     width: 60px;
+    height: 20px;
     text-align: center;
     color: white;
     background-color: blue;
 }
+
+/*
+gjj
+*/
+
+.box5 {
+    padding: 1rem;
+    margin: 0.5rem 0.8rem;
+    height: 20rem;
+    font-size: 1rem;
+    border-color: gray;
+    border-style: dashed;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+  
+  .box5 > div {
+    border-color: gray;
+    border-style: double;
+    padding: 2rem;
+  }
+  
+  .box5 div:nth-child(2n) {
+    background-color: red;
+    flex-basis: 4rem;
+    flex-grow: 20;
+    flex-shrink: 0;
+    height: 3rem;
+  }
+  
+  .box5 div:nth-child(3n) {
+    background-color: green;
+    flex-basis: 5rem;
+    flex-grow: 0;
+    flex-shrink: 10;
+    height: 1rem;
+  }
+  
+  .box5 div:first-child {
+    background-color: blue;
+    height: 2rem;
+    flex: 1 1 5rem;
+  }
+  
+  .content2 {
+    height: 260px;
+    border-color: gray;
+    border-style: dashed;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-between;
+    align-items: center;
+  }
+  
+  .content2 > div {
+    width: 120px;
+  }
+  
+  .content2 div:nth-child(1n) {
+    height: 20px;
+    flex: 0 1 100px;
+  }
+  
+  .content2 div:nth-child(2n) {
+    height: 50px;
+    flex: 0 0 160px;
+  }
+  
+  .red {
+    background: orangered;
+  }
+  .green {
+    background: yellowgreen;
+    height: 20px;
+  }
+  .blue {
+    background: steelblue;
+  }
+  
